--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <body>
 
   <header>
-    <img src="img/Logo99.jpg" alt="Tilo Café">
+    <img src="img/french99.jpg" alt="Tilo Café">
   </header>
 
   <div class="banner">¡Bienvenidos a Tilo Café French!</div>
