--- a/admin.html
+++ b/admin.html
@@ -157,7 +157,7 @@
 
  <script>
   const USERNAME = "cholose10";
-  const REPO = "cartaaguero"; // ⚠️ cambiar por "cartafrench" en la otra sucursal
+  const REPO = "cartafrench"; // ⚠️ cambiar por "cartafrench" en la otra sucursal
   const FILE_PATH = "productos.json";
   let productos = [];
   let autoSaveTimer = null;
