--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
       if (idiomaActual === "en") filename = "productos-en.json";
       if (idiomaActual === "pt") filename = "productos-port.json";
 
-      const RAW_URL = `https://raw.githubusercontent.com/${USER}/${REPO}/main/${filename}`;
+      /* 🚀 URL SIN BLOQUEO (jsDelivr) */
+      const RAW_URL = `https://cdn.jsdelivr.net/gh/${USER}/${REPO}/${filename}`;
 
       try {
         const res = await fetch(RAW_URL, { cache: "no-store" });
