--- a/admin.html
+++ b/admin.html
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <h1>Admin Carta — Tilo Café Agüero</h1>
+  <h1>Admin Carta — Tilo Café french</h1>
   <div class="topRow">
     <div style="flex:1">
       <div style="margin-bottom:6px"><span class="small">Repositorio:</span> <b>cholose10 / cartaaguero</b></div>
