--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-    const USER = 'cholose10';
+    const USER = 'tilo-restocafe';
     const REPO = 'cartafrench';
     let idiomaActual = localStorage.getItem('idioma') || 'es';
 
