--- a/admin.html
+++ b/admin.html
@@ -126,7 +126,7 @@
 /**********************************************************
  * Config + estado
  **********************************************************/
-const USERNAME = "cholose10";
+const USERNAME = "tilo-restocafe";
 const REPO = "cartafrench";
 const BRANCH = "main";
 const MAIN_JSON = "productos.json";
